--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-
-<main role="main" class="container-fluid">
+<main style="height: 100vh; width: 100vw;" role="main" class="container-fluid">
   <router-outlet></router-outlet>
 </main>
 
