--- a/src/app/web/dashboard/dashboard.component.html
+++ b/src/app/web/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <header>
-<app-navbar></app-navbar>
+  <app-navbar></app-navbar>
 </header>
-<p>Web dashboard works!</p>
+Web works!
 <footer class="footer bg-dark fixed-bottom">
   <app-footer></app-footer>
 </footer>
