--- a/src/app/admin/navigations/navbar/navbar.component.html
+++ b/src/app/admin/navigations/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <ul class="navbar-nav w-100 d-flex nav-center">
-    <li class="nav-item"><a class="nav-link padding-nav-link" href="#">Users</a></li>
+    <li class="nav-item"><a class="nav-link padding-nav-link" href="/admin/users">Users</a></li>
     <li class="nav-item"><a class="nav-link padding-nav-link" href="/admin/resorts">Resorts</a></li>
   </ul>
 </nav>
