--- a/src/app/web/navigations/navbar/navbar.component.html
+++ b/src/app/web/navigations/navbar/navbar.component.html
@@ -1,2 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+  <li class="nav-item account-bnt" (click)="signOut();">
+    <a class="nav-link">Log out</a>
+  </li>
 </nav>
