--- a/src/app/web/company-profile/company-profile.component.html
+++ b/src/app/web/company-profile/company-profile.component.html
@@ -1,13 +1,12 @@
 <header>
   <app-navbar></app-navbar>
 </header>
+
 <div class="container-fluid shade"></div>
 <div class="container-fluid">
-  <div class="loader" *ngIf="isLoading"></div>
-  <div class="col-md-10 offset-md-1" *ngIf="!isLoading">
-
-  </div>
+Profile
 </div>
+
 <footer class="footer bg-dark fixed-bottom">
   <app-footer></app-footer>
 </footer>
