--- a/src/app/web/navigations/navbar/navbar.component.html
+++ b/src/app/web/navigations/navbar/navbar.component.html
@@ -1,5 +1,33 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <li class="nav-item account-bnt" (click)="signOut();">
-    <a class="nav-link">Log out</a>
-  </li>
+  <a class="navbar-brand" [routerLink]="['/web']">
+    <img [routerLink]="['/web']" src="/assets/images/logo-w.png" alt="Ratoong">
+  </a>
+  <button class="navbar-toggler ml-auto custom-toggler" type="button" data-toggle="collapse" (click)="isCollapsed= !isCollapsed">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" [ngClass]="{'hideMenu': isCollapsed,'showMenu': !isCollapsed}" id="navbarsTop">
+    <ul class="navbar-nav w-100 d-flex nav-center">
+      <li  class="nav-item">
+        <a [routerLink]="['/web/api']" [routerLinkActive]="['active']" (click)="isCollapsed= true;" class="nav-link padding-nav-link">API Documentation</a>
+      </li>
+      <li class="nav-item">
+        <a [routerLink]="['/web/summary']" [routerLinkActive]="['active']" (click)="isCollapsed= true;" class="nav-link padding-nav-link">Summary</a>
+      </li>
+      <!-- item for mobile -->
+      <li class="nav-item"  *ngIf="currentU"  (click)="isCollapsed= true;">
+        <a [routerLink]="['/web/user-profile']" [routerLinkActive]="['active']" class="nav-link padding-nav-link">
+          My Profile
+        </a>
+      </li>
+      <div class="group navbar">
+        <li class="nav-item profile-name" *ngIf="currentU">
+          {{currentU.email}}
+        </li>
+        <li class="nav-item account-bnt" (click)="signOut(); isCollapsed= true;" *ngIf="currentU">
+          <a class="nav-link">Log out</a>
+        </li>
+      </div>
+    </ul>
+  </div>
+  <div *ngIf="mobile && !showMobileMenu" class="overlay-menu" (click)="openMobileMenu()"></div>
 </nav>
