--- a/src/app/web/summary-page/summary-page.component.html
+++ b/src/app/web/summary-page/summary-page.component.html
@@ -1,13 +1,20 @@
 <header>
   <app-navbar></app-navbar>
 </header>
-<div class="container-fluid shade"></div>
-<div class="container-fluid">
+
+<div role="main" class="bg-image-search"></div>
+<div class="row">
   <div class="loader" *ngIf="isLoading"></div>
   <div class="col-md-10 offset-md-1" *ngIf="!isLoading">
 
+    <div class="details-container">
+      <div class="flex-container">
+        Summary
+      </div>
+    </div>
   </div>
 </div>
+
 <footer class="footer bg-dark fixed-bottom">
   <app-footer></app-footer>
 </footer>
