Added My profile page

--- a/src/app/web/api-documentation/api-documentation.component.html
+++ b/src/app/web/api-documentation/api-documentation.component.html
@@ -138,13 +138,13 @@
               Optional: <code>fromDate</code>
             </li>
             <div class="explanation">
-              This filter will include out all ratings from a specific date. Format : Year-Month-Dat. Example: 1970-07-15
+              This filter will include out all ratings from a specific date. Format : Year-Month-Day. Example: 1970-07-15
             </div>
             <li  class="option optional">
               Optional: <code>toDate</code>
             </li>
             <div class="explanation">
-              This filter will include out all ratings until a specific date. Format : Year-Month-Dat. Example: 1999-07-15
+              This filter will include out all ratings until a specific date. Format : Year-Month-Day. Example: 1999-07-15
             </div>
             <li  class="option">
               Required: <code>Api key</code>
