--- a/src/app/web/navigations/navbar/navbar.component.html
+++ b/src/app/web/navigations/navbar/navbar.component.html
@@ -7,6 +7,9 @@
   </button>
   <div class="collapse navbar-collapse" [ngClass]="{'hideMenu': isCollapsed,'showMenu': !isCollapsed}" id="navbarsTop">
     <ul class="navbar-nav w-100 d-flex nav-center">
+      <li *ngIf="currentU.isAdmin" class="nav-item">
+        <a [routerLink]="['/admin']" (click)="isCollapsed= true;" class="nav-link padding-nav-link">Admin</a>
+      </li>
       <li  class="nav-item">
         <a [routerLink]="['/web/api']" [routerLinkActive]="['active']" (click)="isCollapsed= true;" class="nav-link padding-nav-link">API Documentation</a>
       </li>
