--- a/src/app/admin-login/admin-login.component.html
+++ b/src/app/admin-login/admin-login.component.html
@@ -7,34 +7,34 @@
       <div class="brick">
         <h2 class="text-center text-uppercase">Login</h2>
         <form [formGroup]="loginDetail" (ngSubmit)="signIn()" novalidate>
-          <!-- start auth form -->
-          <div class="form-group">
-            <label for="InputEmail1" class="sr-only">EMAIL</label>
-            <input type="email" class="form-control" id="InputEmail1" placeholder="Email" formControlName="email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
-            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-              <div *ngIf="f.email.errors.required">Email is required</div>
-            </div>
+
+          <div class="field">
+            <input type="email" name="email" class="input small-letters" placeholder="" formControlName="email" />
+            <label for="email" class="label">Email</label>
           </div>
-          <div class="form-group">
-            <div class="input-group">
-              <input [type]="fieldTextType ? 'text' : 'password'" class="form-control ratoong" type="password" formControlName="pwd" maxlength="20" placeholder="Password" [ngClass]="{ 'is-invalid': submitted && f.pwd.errors }">
-              <div class="input-group-append">
-                <span class="btn btn-outline-secondary eye-design no-borders" (click)="toggleFieldTextType()">
+
+          <ul *ngIf="f.email.errors && (f.email.dirty || f.email.touched)">
+            <li *ngIf="f.email.errors.minlength" class="error-text">  Email must be at least 5 characters</li>
+            <li *ngIf="f.email.errors.maxlength" class="error-text">  Email must be no more than 100 characters</li>
+            <li *ngIf="f.email.errors.required" class="error-text">  Email is required </li>
+          </ul>
+
+          <div class="field">
+            <input [type]="fieldTextType ? 'text' : 'password'" name="email" class="input small-letters" formControlName="pwd" placeholder=""/>
+            <label for="password" class="label">Password</label>
+            <span class="btn btn-outline-secondary eye-design no-borders toggle-password" (click)="toggleFieldTextType()">
                   <i class="far" [ngClass]="{'fa-eye-slash': !fieldTextType,'fa-eye': fieldTextType}"></i>
-                </span>
-              </div>
-              <div *ngIf="submitted && f.pwd.errors" class="invalid-feedback"  >
-                <div *ngIf="f.pwd.errors.required">Password is required</div>
-              </div>
-            </div>
+            </span>
           </div>
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1" formControlName="toRegister">
-            <label class="form-check-label" for="exampleCheck1">Register?</label>
-          </div>
-          <!-- end auth form -->
-          <small class="text-danger d-flex justify-content-center">{{this.errorMsg}}</small>
-          <input type="submit" class="btn btn-info text-white login-button" value="Log in">
+
+          <ul *ngIf="f.pwd.errors && (f.pwd.dirty || f.pwd.touched)">
+            <li *ngIf="f.pwd.errors.minlength" class="error-text">  Password must be at least 5 characters</li>
+            <li *ngIf="f.pwd.errors.maxlength" class="error-text">  Password must be no more than 20 characters</li>
+            <li *ngIf="f.pwd.errors.required" class="error-text">  Password is required </li>
+          </ul>
+
+          <input type="submit" [disabled]="!(f.pwd.errors === null && f.email.errors === null)" class="btn btn-info text-white login-button" value="Log in">
+
         </form>
       </div>
     </div>
