--- a/src/app/admin-login/admin-login.component.scss
+++ b/src/app/admin-login/admin-login.component.scss
@@ -49,11 +49,8 @@ $first-image: url('https://firebasestorage.googleapis.com/v0/b/ratoong-dev.appsp
   border: none;
 }
 .error-text{
-color: red;
-display: block;
-text-align: center;
-line-height: 1;
-text-shadow: 0 1px 0.1px black;
+  font-size: 1.2rem;
+  color: #dc3545;
 }
 .register {
   display: inline-block;
@@ -68,12 +65,12 @@ text-shadow: 0 1px 0.1px black;
   flex-flow: row
 }
 .eye-design {
+  border: 0;
   color: #000 !important;
   transition: none !important ;
-  border-color: #000000;
 }
 .eye-design:hover {
-  background-color: #fff !important;
+  background-color: transparent !important;
   color: #000 !important;
 }
 .no-borders {
@@ -82,4 +79,124 @@ text-shadow: 0 1px 0.1px black;
 .login-button{
   width: 100%;
   border-radius: 0;
+}
+
+
+
+form {
+  --text-color: #afafaf;
+}
+.field {
+  width: 100%;
+  position: relative;
+  border-bottom: 2px dashed var(--text-color);
+  margin: 1rem auto 2rem;
+  transition: 500ms;
+}
+.label {
+  color:var(--text-color);
+  font-size: 1.2rem;
+}
+.input {
+  outline: none;
+  border: none;
+  overflow: hidden;
+  margin: 0;
+  width: 100%;
+  padding: 0.25rem 0;
+  background: none;
+  color: white;
+  font-size: 1.2em;
+  font-weight: bold;
+  transition: border 500ms;
+}
+.input:valid {
+  color: black;
+}
+.input:invalid {
+  color: orangered;
+}
+/* Border animation */
+.field::after {
+  content: "";
+  position: relative;
+  display: block;
+  height: 4px;
+  width: 100%;
+  background: #10707f;
+  transform: scaleX(0);
+  transform-origin: 0%;
+  opacity: 0;
+  transition: all 500ms ease;
+  top: 2px;
+}
+
+.errored{
+  background: orangered !important;
+}
+.field:focus-within {
+  border-color: transparent;
+}
+.field:focus-within::after {
+  transform: scaleX(1);
+  opacity: 1;
+}
+/* Label animation */
+.label {
+  z-index: -1;
+  position: absolute;
+  transform: translateY(-2rem);
+  transform-origin: 0%;
+  transition: transform 400ms;
+}
+.field:focus-within .label,
+.input:not(:placeholder-shown) + .label {
+  transform: scale(0.8) translateY(-5rem);
+  opacity: 1;
+}
+/* Strength Meter */
+.strength {
+  display: flex;
+  height: 20px;
+  width: 100%;
+}
+.bar {
+  margin-right: 5px;
+  height: 100%;
+  width: 25%;
+  transition: box-shadow 500ms;
+  box-shadow: inset 0px 20px #1f1f1f;
+}
+.bar-show {
+  box-shadow: none;
+}
+
+.bar:last-child {
+  margin-right: 0;
+}
+.strength-text {
+  margin-top: 20px;
+}
+
+ul {
+  list-style: none;
+  margin: 10px 0;
+  padding: 0;
+  font-size: 0.7rem;
+  text-align: left;
+}
+
+.toggle-password {
+  position: absolute;
+  cursor: help;
+  font-size: 0.8rem;
+  right: 0.25rem;
+  bottom: 0.5rem;
+}
+
+
+.small-letters{
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
 }
