Changed design of main page

--- a/src/app/overview/summary-page/summary-calendar/summary-calendar.component.html
+++ b/src/app/overview/summary-page/summary-calendar/summary-calendar.component.html
@@ -25,6 +25,9 @@
     </div>
   </div>
   <div class="form-group">
+    <div class="extra-words">
+      From
+    </div>
     <div class="input-group">
       <input #dpFromDate
              class="form-control" placeholder="yyyy-mm-dd"
@@ -39,6 +42,9 @@
     </div>
   </div>
   <div class="form-group ml-2">
+    <div class="extra-words">
+      To
+    </div>
     <div class="input-group">
       <input #dpToDate
              class="form-control" placeholder="yyyy-mm-dd"
