--- a/src/app/overview/summary-page/summary-gender/summary-gender.component.html
+++ b/src/app/overview/summary-page/summary-gender/summary-gender.component.html
@@ -1,10 +1,35 @@
-<div style="display: block;">
-  <canvas baseChart
-          [data]="pieChartData"
-          [labels]="pieChartLabels"
-          [chartType]="pieChartType"
-          [options]="pieChartOptions"
-          [plugins]="pieChartPlugins"
-          [legend]="pieChartLegend">
-  </canvas>
+<div class="circle-flex">
+  <div class="canvas-style">
+    <canvas baseChart
+            [data]="pieChartData"
+            [labels]="pieChartLabels"
+            [chartType]="pieChartType"
+            [options]="pieChartOptions"
+            [plugins]="pieChartPlugins"
+            [legend]="pieChartLegend">
+    </canvas>
+
+  </div>
+
+  <div class="canvas-style">
+    <canvas baseChart
+            [data]="typeData"
+            [labels]="typeLabels"
+            [chartType]="pieChartType"
+            [options]="typeOptions"
+            [plugins]="pieChartPlugins"
+            [legend]="pieChartLegend">
+    </canvas>
+  </div>
+
+  <div class="canvas-style" >
+    <canvas baseChart
+            [data]="timeData"
+            [labels]="timeLabels"
+            [chartType]="pieChartType"
+            [options]="timeOptions"
+            [plugins]="pieChartPlugins"
+            [legend]="pieChartLegend">
+    </canvas>
+  </div>
 </div>
