--- a/src/app/overview/summary-page/summary-gender/summary-gender.component.scss
+++ b/src/app/overview/summary-page/summary-gender/summary-gender.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-flow: row;
   width: 100%;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 .canvas-style{
   display: block;
