--- a/src/app/overview/summary-page/summary-page.component.scss
+++ b/src/app/overview/summary-page/summary-page.component.scss
@@ -91,6 +91,8 @@
   border-radius: 0 !important;
   margin-right: 10px;
   background: transparent;
+  padding-right: 20px;
+  padding-left: 20px;
 }
 .added-margin:hover {
   box-shadow: 0 0 0 1px $color-ratoong-blue-43 !important;
@@ -124,10 +126,19 @@
 .most-important-data{
   display: flex;
   flex-flow: row;
+  margin: 5px 0 35px 0;
 }
 
 .most-optional-data{
   display: flex;
   flex-flow: row;
   width: 100%;
+}
+
+.rating-text{
+  margin-top: 20px;
+}
+
+.table th, .table td {
+  padding: 0.5rem 0.75rem !important;
 }
